--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/dev-heeseok/web-nodejs#readme",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "pm2": "^5.2.0",
     "sanitize-html": "^2.7.0"
