--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "heroku-prebuild": "cd client && npm ci && npm run build && mv build ../server",
-    "start" : "cd server && npm ci && tsc && node app.js",
+    "start": "cd server && npm ci && tsc && node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/dev-heeseok/web-nodejs/issues"
   },
-  "homepage": "https://github.com/dev-heeseok/web-nodejs#readme"
+  "homepage": "https://github.com/dev-heeseok/web-nodejs#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.16"
+  }
 }
