--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node.js 를 공부하면서 샘플 테스트를 작성하기 위한 프로젝트이다. 간단한 웹 페이지 작성 및 필요한 기록들을 문서로 작성하여 관리할 예정이다.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon main.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,7 @@
     "body-parser": "^1.20.0",
     "compression": "^1.7.4",
     "express": "^4.18.1",
+    "nodemon": "^2.0.16",
     "pm2": "^5.2.0",
     "sanitize-html": "^2.7.0"
   }
